--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,9 @@
-{ "rewrites": [{ "source": "/(.*)", "destination": "/" }] }
+{
+    "builds": [
+      { "src": "index.html", "use": "@vercel/static" },
+      { "src": "public/**/*", "use": "@vercel/static" }
+    ],
+    "routes": [
+      { "src": "/(.*)", "dest": "/quizapp.html" }
+    ]
+  }
